<resources>
    <string name="app_name">Voyasia</string>
    <string name="book_hotels">Book Hotels</string>
    <string name="suggested_hotels">Suggested Hotels</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="tuk_drivers">Tuk Drivers</string>
    <string name="top_rated_drivers">Top Rated Drivers</string>
    <string name="estimated_arrival">Estimated Arrival</string>
    <string name="_1500">1500/=</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="drop_off_location">Drop-off Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="_18_00">18:00</string>
    <string name="request_ride">Request Ride</string>
    <string name="hello">Hello...!</string>
    <string name="suggested_destinations">Suggested Destinations</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="create_my_plan">Create My Plan</string>
    <string name="write_down_your_plans">Write down your plans</string>
    <string name="day_3_sigiriya">Day 3: Sigiriya</string>
    <string name="day_2_kandy">Day 2: Kandy</string>
    <string name="day_1_colombo">Day 1: Colombo</string>
    <string name="itinerary_planner">Itinerary Planner</string>
    <string name="your_booking_is_confirmed">Your booking is confirmed!</string>
    <string name="you_re_all_set_for_your_adventure_in_sri_lanka_here_s_a_summary_of_your_booking">You\'re all set for your adventure in Sri Lanka. Here\'s a summary of your booking:</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="back_to_home">Back to Home</string>
    <string name="view_booking">View Booking</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="driver_image">Driver Image</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="let_s_get_you_started">Let\'s get you started!</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>